[#11] 도서 목록 조회 테스트 변경